improve the system owner tab UI on the system page
Change-Id: If40e9c7af7f8ad535b46a41c2f1974d4406afa91

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -265,6 +265,21 @@ input.tt-hint {
     box-shadow: 0px 2px 14px rgba(50, 50, 50, 0.5);
 }
 
+// simulate Bootstrap 3 list group
+.list-group {
+    margin-left: 0px;
+    margin-bottom: 20px;
+    li {
+        position: relative;
+        display: block;
+        padding: 10px 15px;
+        // Place the border on the list items and negative margin up for better styling
+        margin-bottom: -1px;
+        background-color: @white;
+        border: 1px solid #ddd;
+    }
+}
+
 @import "master.less";
 @import "system.less";
 @import "job.less";
