--- a/Server/assets/system.less
+++ b/Server/assets/system.less
@@ -110,14 +110,10 @@
 }
 
 .system-notify-cc {
-    li {
-        list-style: none;
-        margin: 0.75em 0;
-    }
-    a.cc-remove {
-        color: @gray;
-        text-decoration: none;
-        font-size: 1.25em;
+    max-width: 35em;
+    .btn {
+        float: right;
+        margin-top: -5px;
     }
 }
 
