Implement system pools
This is an initial implementation of system pools which phases out the
existing system groups.

Change-Id: I76b61ae84c6d850d8870d22b0034a7bcfd2625ec

--- a/Server/assets/system.less
+++ b/Server/assets/system.less
@@ -125,6 +125,10 @@
 /* The data in these tables is often quite brief and so stretching them out to 
  * fill the entire width of the viewport hurts readability, since it causes the 
  * columns to be spaced very far apart. */
-#groups .table, #keys .table {
-    width: auto;
+.system-pools-list {
+    max-width: 35em;
+    .btn {
+        float: right;
+        margin-top: -5px;
+    }
 }
