system pool editing Web UI
Change-Id: I4f5247fdf093f895fcbcb76ecdea9f830509d916

--- a/Server/assets/system.less
+++ b/Server/assets/system.less
@@ -110,11 +110,7 @@
 }
 
 .system-notify-cc {
-    max-width: 35em;
-    .btn {
-        float: right;
-        margin-top: -5px;
-    }
+    .list-group-mixin()
 }
 
 #access-policy .table .btn {
@@ -126,9 +122,5 @@
  * fill the entire width of the viewport hurts readability, since it causes the 
  * columns to be spaced very far apart. */
 .system-pools-list {
-    max-width: 35em;
-    .btn {
-        float: right;
-        margin-top: -5px;
-    }
+    .list-group-mixin()
 }
