--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -260,6 +260,10 @@ input.tt-hint {
     font-size: @baseFontSize;
 }
 
+.input-append .twitter-typeahead, .input-prepend .twitter-typeahead {
+    font-size: @baseFontSize;
+}
+
 // "Growl-like" notifications
 .alert.bootstrap-growl {
     box-shadow: 0px 2px 14px rgba(50, 50, 50, 0.5);
@@ -280,8 +284,17 @@ input.tt-hint {
     }
 }
 
+.list-group-mixin {
+    max-width: 35em;
+    .btn {
+        float: right;
+        margin-top: -5px;
+    }
+}
+
 @import "master.less";
 @import "system.less";
+@import "system-pool.less";
 @import "job.less";
 @import "recipe-tasks.less";
 @import "job-matrix.less";
