Web UI for changing active access policy
Change-Id: I0aae72e5036367efd1941a5031ea02bb56e9d7e1

--- a/Server/assets/system.less
+++ b/Server/assets/system.less
@@ -124,3 +124,12 @@
 .system-pools-list {
     .list-group-mixin()
 }
+
+.active-access-policy-chooser {
+   label.select-beside {
+        display: inline-block;
+    }
+   select {
+        margin: 0 0 0 4px;
+   }
+}
