labcontroller: API to edit lab controllers
This patch adds API end points for an upcoming change to port the lab
controllers edit page to backbone.

Bug: 1251355
Change-Id: I6fa5f319aabd7741d9656cc5ae0e54c2d565b693

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -289,7 +289,11 @@ input.tt-hint {
 
 .list-group-mixin {
     max-width: 35em;
-    .btn {
+    li > .btn {
+        float: right;
+        margin-top: -5px;
+    }
+    li > .btn-group {
         float: right;
         margin-top: -5px;
     }
@@ -305,6 +309,7 @@ input.tt-hint {
 @import "powertypes.less";
 @import "group.less";
 @import "clone-job.less";
+@import "labcontrollers.less";
 
 // Site-specific styles. The beaker-server package creates site.less as 
 // a symlink to /dev/null if it doesn't exist. Admins can overwrite the symlink 
