powertype: refactored to JSON api
This patch refactores the powertype to use a json api. It also fixes the
keytypes test which failed due to a copy & paste error.

Bug: 1022461
Change-Id: I91775b5a7ba5bcec03b6543b20eb0aa4856a0275

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -299,6 +299,7 @@ input.tt-hint {
 @import "recipe-tasks.less";
 @import "job-matrix.less";
 @import "query-builder.less";
+@import "powertypes.less";
 
 // Site-specific styles. The beaker-server package creates site.less as 
 // a symlink to /dev/null if it doesn't exist. Admins can overwrite the symlink 
