port group editing page to Backbone
Bug: 1251356
Change-Id: I4b9e88190618b7d2798fe67f7e9e73a7a6efeeab

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -300,6 +300,7 @@ input.tt-hint {
 @import "job-matrix.less";
 @import "query-builder.less";
 @import "powertypes.less";
+@import "group.less";
 
 // Site-specific styles. The beaker-server package creates site.less as 
 // a symlink to /dev/null if it doesn't exist. Admins can overwrite the symlink 
