--- a/Server/assets/recipe-tasks.less
+++ b/Server/assets/recipe-tasks.less
@@ -4,7 +4,7 @@
 // the Free Software Foundation; either version 2 of the License, or
 // (at your option) any later version.
 
-// recipe tasks on job and recipe pages (and elsewhere)
+// recipe tasks on OLD, DEPRECATED job and recipe pages (and elsewhere)
 table.tasks {
     & > tbody {
         border-top: 2px solid @tableBorder;
