upgrade bootstrap-select to 1.7.3
The latest version has a useful feature data-live-search="true" which
shows a text input field for filtering the options in the dropdown.
We will need that for the product selector on the job page since there
will be hundreds of products.

Change-Id: I8b94689fbe52bf62b99b9b90bcf0a13120dd2344

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -62,7 +62,10 @@
 @import "font-awesome/less/font-awesome.less";
 @import "typeahead.js-bootstrap.less";
 @import "bootstrap-datepicker/less/datepicker.less";
-@import (less) "bootstrap-select/bootstrap-select.css";
+@import "bootstrap-select/less/bootstrap-select.less";
+// bootstrap-select is now targetting Boostrap 3, we need to apply a few tweaks
+// to make it look right for Bootstrap 2.3
+@import "bootstrap-select-bs2fixes.less";
 @import "datatables-bootstrap.less";
 @import "backgrid.less";
 
