--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -38,8 +38,8 @@
 //@import "bootstrap/less/pager.less";
 // Components: Popovers
 @import "bootstrap/less/modals.less";
-//@import "bootstrap/less/tooltip.less";
-//@import "bootstrap/less/popovers.less";
+@import "bootstrap/less/tooltip.less";
+@import "bootstrap/less/popovers.less";
 // Components: Misc
 //@import "bootstrap/less/thumbnails.less";
 @import "bootstrap/less/media.less";
@@ -87,10 +87,15 @@
 // workaround for https://github.com/twitter/typeahead.js/issues/147
 .modal-body {
     overflow: visible;
+    max-height: none;
 }
 
 // workaround for missing margin above help-block with bootstrap-select
 .form-horizontal .bootstrap-select + .help-block {
+    margin-top: @baseLineHeight / 2;
+}
+// missing margin above help-block with a btn-group
+form .btn-group + .help-block {
     margin-top: @baseLineHeight / 2;
 }
 
@@ -234,6 +239,11 @@ td form, td input, td select, td .input-append, td .input-prepend {
 @resultWarnColor: @orange;
 @resultNewColor: @blue;
 @resultPanicColor: @black;
+.label-result-pass  { background-color: @resultPassColor; }
+.label-result-fail  { background-color: @resultFailColor; }
+.label-result-warn  { background-color: @resultWarnColor; }
+.label-result-new   { background-color: @resultNewColor; }
+.label-result-panic { background-color: @resultPanicColor; }
 
 // XXX The above colours are used in the job matrix and are carried over
 // from our pre Bootstrap styling.
@@ -303,6 +313,7 @@ input.tt-hint {
 @import "system.less";
 @import "system-pool.less";
 @import "job.less";
+@import "job-old.less";
 @import "recipe-tasks.less";
 @import "job-matrix.less";
 @import "query-builder.less";
