track per-user recipe reviewed state
Opening the recipe page marks that recipe as reviewed. The job page now
has checkboxes for marking recipes as (un-)reviewed.

Bug: 1263917
Change-Id: I034a335878722c34295aa60638c0c78cfd7f7096

--- a/Server/assets/job.less
+++ b/Server/assets/job.less
@@ -84,6 +84,9 @@
     .recipeset .label {
         margin-left: 0.5em;
     }
+    .recipe-reviewed {
+        margin: 0;
+    }
     .recipe-metadata {
         // This trick lets the cell expand to fill the width but keeps it to a
         // single line with ellipsis truncation, in the style of Gmail.
