inverted group page
Bug: 1220610
Change-Id: I6b14cf0163b0c0662da96c473eeb8017a2bf4d20

--- a/Server/assets/group.less
+++ b/Server/assets/group.less
@@ -5,7 +5,8 @@
 // (at your option) any later version.
 
 // group page
-.group-members-list, .group-owners-list, .group-permissions-list{
+.group-members-list, .group-excluded-users-list, .group-owners-list,
+.group-permissions-list{
     .list-group-mixin()
 }
 
