ported user page to Backbone
Change-Id: Id63ff889de3b57e2d235ca0a1e179fbeb08677a1

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -303,6 +303,7 @@ input.tt-hint {
 @import "system.less";
 @import "system-pool.less";
 @import "job.less";
+@import "user.less";
 @import "recipe-tasks.less";
 @import "job-matrix.less";
 @import "query-builder.less";
