--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -304,6 +304,7 @@ input.tt-hint {
 @import "system-pool.less";
 @import "job.less";
 @import "user.less";
+@import "prefs.less";
 @import "recipe-tasks.less";
 @import "job-matrix.less";
 @import "query-builder.less";
