ensure the popover used for comments is not closed when the job is refreshed
On the job page, the pop-up popover used for comments will stay visible
when the job is automatically refreshed. Moreover, when clicking outside of
the popover, it will be closed.

Change-Id: Ie50c836b1223f094d4c376cf6b9d9f4a443cd710

--- a/Server/assets/job.less
+++ b/Server/assets/job.less
@@ -135,27 +135,6 @@
         .comments-link {
             white-space: nowrap;
         }
-        .popover {
-            min-width: 27em;
-            max-width: 40em;
-            .popover-content {
-                padding: 9px 0;
-            }
-            div.comment {
-                padding: 0 14px;
-            }
-            div.comment + div.comment {
-                padding-top: 1em;
-                border-top: 1px solid @grayLighter;
-                margin-top: 1em;
-            }
-            p:last-child {
-                margin-bottom: 0;
-            }
-            .comment-metadata {
-                .muted;
-            }
-        }
     }
     .recipeset-actions {
         text-align: right;
@@ -189,4 +168,25 @@
 .job-header abbr, .recipeset-id abbr, .recipe-id abbr {
     text-decoration: none;
     border-bottom: none;
+}
+.popover.recipeset-comments-popover {
+    min-width: 27em;
+    max-width: 40em;
+    .popover-content {
+        padding: 9px 0;
+    }
+    div.comment, div.recipeset-comment-form {
+        padding: 0 14px;
+    }
+    div.comment + div.comment, div.comments + div.recipeset-comment-form {
+        padding-top: 1em;
+        border-top: 1px solid @grayLighter;
+        margin-top: 1em;
+    }
+    p:last-child {
+        margin-bottom: 0;
+    }
+    .comment-metadata {
+        .muted;
+    }
 }
