--- a/Server/assets/recipe.less
+++ b/Server/assets/recipe.less
@@ -102,6 +102,11 @@
         flex-shrink: 0;
         flex-basis: @mainLogWidth + 3em;
     }
+    .task-comments, .task-result-comments {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: 3em;
+    }
     .recipe-task-status, .task-result-result {
         flex-grow: 0;
         flex-shrink: 0;
