recipe page: allow tasks flexible boxes to overflow tab content div
Change-Id: Ifbc8c0441fd9e96eb285b12450e8d4551ae9e81d

--- a/Server/assets/recipe.less
+++ b/Server/assets/recipe.less
@@ -8,6 +8,9 @@
 
 @mainLogWidth: 15em;
 
+.recipe-tabs {
+    overflow: visible;
+}
 .recipe-btn-group {
     font-weight: normal;
     margin-left: 15px;
