fix fat bottom margin on comment form
Change-Id: I6c484a3c7f0abee33ce322bec44348d0fb4f0669

--- a/Server/assets/job-and-recipe.less
+++ b/Server/assets/job-and-recipe.less
@@ -63,6 +63,9 @@
     p:last-child {
         margin-bottom: 0;
     }
+    .comment-form form {
+        margin-bottom: 4px;
+    }
     .comment-metadata {
         .muted;
     }
