Make reservation unit widget re-usable
This re-factors the JavaScript and template code around the reservation
UI. The widget can now be re-used in other parts of the system esp. the
reservation workflow.

Change-Id: I9759c4628d9aa6aafe7a4f3cfd5c7ca20b37b8ef

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -329,6 +329,7 @@ input.tt-hint {
 @import "labcontrollers.less";
 @import "recipe.less";
 @import "job-and-recipe.less";
+@import "reservation-duration-selection.less";
 
 // Site-specific styles. The beaker-server package creates site.less as 
 // a symlink to /dev/null if it doesn't exist. Admins can overwrite the symlink 
