--- a/Server/assets/recipe.less
+++ b/Server/assets/recipe.less
@@ -85,6 +85,12 @@
         flex-shrink: 0;
         flex-basis: @panel-body-padding + 1px;
         cursor: pointer;
+        a:after {
+            content: @fa-var-caret-down;
+        }
+        a.collapsed:after {
+            content: @fa-var-caret-right;
+        }
     }
     .task-id, .task-result-id {
         flex-grow: 0;
