UI for updating conditional reservations
Bug: 1100593
Change-Id: I386bd8a53c33c742b167043c2748b8eb04051003

--- a/Server/assets/recipe.less
+++ b/Server/assets/recipe.less
@@ -237,3 +237,8 @@
         }
     }
 }
+.recipe-reservation-edit .toggle-reservation-form .btn-group {
+    // Form elements have margin-bottom: 10px from Bootstrap, but we are using
+    // a btn-group as a form field here, so we have to space it explicitly.
+    margin-bottom: 10px;
+}
